# XVPatcher

./: .gitignore  AwbFile.h  BaseFile.cpp  BaseFile.h  CMakeLists.txt  CpkDef.cpp  CpkDef.h  CpkDef.hpp  CpkFile.cpp  CpkFile.h  FixedMemoryStream.h  IggyFile.cpp  IggyFile.h  Makefile  MemoryStream.cpp  MemoryStream.h  PatchUtils.cpp  PatchUtils.h  README.md  README_VS.md  Stream.cpp  Stream.h  UtfLowLevel.h  Utils.cpp  Utils.h  UtilsStr.h  UtilsZlib.cpp  build.bat  build_vs.bat  common.h  cpk_patch.cpp  cpk_patch.h  cpkdef.cpp  cpkdef.h  debug.cpp  debug.h  log.cpp  log.h  main.cpp  mingw-toolchain.cmake  (+8 more)
build_vs/: CMakeCache.txt
